# 3d-mfcfd

./: .gitignore  CMakeLists.txt  README.md  a.out  compute_conserved_vector.f90  compute_conserved_vector_mod.h  conserved_to_primitive_vector.f90  conserved_to_primitive_vector_mod.h  conserved_vector_Ubar.f90  conserved_vector_Ubar_mod.h  cpp.out  data_structure.f90  data_structure_mod.h  flux_residual.f90  flux_residual_mod.h  fpi_solver.f90  fpi_solver_mod.h  generate_connectivity.f90  generate_connectivity_mod.h  get_primitive_vector.f90  implicit_D_inv_interior.f90  implicit_D_inv_outer.f90  implicit_D_inv_wall.f90  implicit_LdelU_forward_sweep_interior.f90  implicit_LdelU_forward_sweep_outer.f90  implicit_LdelU_forward_sweep_wall.f90  implicit_UdelU_backward_sweep_interior.f90  implicit_UdelU_backward_sweep_outer.f90  implicit_UdelU_backward_sweep_wall.f90  implicit_aliasing.f90  implicit_aliasing_mod.h  implicit_forward_and_reverse_sweeps.f90  implicit_forward_and_reverse_sweeps_backup.f90  implicit_forward_and_reverse_sweeps_present.f90  initial_conditions.f90  initial_conditions_mod.h  interior_flux_dGxneg.f90  interior_flux_dGxneg_mod.h  interior_flux_dGxpos.f90  interior_flux_dGxpos_mod.h  (+68 more)
cmake/: FindNVTX.cmake
install/: .gitignore  compare.cpp  execname  install.py
